removed grammer mistake on connections

--- a/app/views/static_pages/connections.html.erb
+++ b/app/views/static_pages/connections.html.erb
@@ -16,7 +16,7 @@
                 <% @user_communication.each do |c| %>
                     <tr>
                         <td>
-                             <%= %>c.CommunicationMode 
+                             <%= %>c.CommunicationMode %>
                         </td>
                         <td>
                             :&nbsp; <%= c.CommunicationDetail %>
