--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -1,6 +1,6 @@
 <%= form_for :profile, :url => { :method => :get, :action => :profile } do |f| %>
 
-<table align="center" width="85%" style=" margin-top: 30px; margin-left:55px; margin-bottom:30px" border="2">
+<table align="center" width="85%" style=" margin-top: 30px; margin-left:55px; margin-bottom:30px" >
     <% if !@user.photo.url.blank? %>
     <tr>
         <td>
@@ -12,7 +12,7 @@
     <tr>
         <td width="40%" style="background-color: #FFFFFF;font-size: large" class="style1" ForeColor="Gray">
         <%= image_tag @user.photo.url(:small),:alt => " " %><br/>
-        <%= f.label(:name, @user.First_Name + " " + @user.Last_Name, :style => "color:Gray;")  %>
+        <%= @user.First_Name + " " + @user.Last_Name %>
         
         </td>
         <td width="60%" style="background-color:#00BFFF;font-size: large">
@@ -87,7 +87,8 @@
             <% end %>
             <% end %>
             <br/>
-            About:      <%= f.label(:about, @user.First_Name + " " + @user.Last_Name, :style => "color:Gray;") %>
+            About:<br/>
+            <%=  @user.First_Name + " " + @user.Last_Name %>
         </td>
         <td width="60%" style="background-color:#00BFFF;font-size: large">
             <table style="color:white;">
