--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -66,13 +66,13 @@
     <td align="right" height="35px" style="font-size: large; color: #212121;">
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I want to be a
     </td>
-    <td align="center" style="font-size: large; color: #212121;">
-      <label class="radio inline" style="font-size: large">
+    <td align="left" style="font-size: large; color: #212121;">
+      &nbsp;&nbsp;<label class="radio inline" style="font-size: large">
         <%= f.radio_button :user_Type, "Mentor", :id => "rb_mentor" %>
         Mentor
       </label>
       <br/>
-      <label class="radio inline" style="font-size: large">
+      &nbsp;&nbsp;<label class="radio inline" style="font-size: large">
         <%= f.radio_button :user_Type, "Mentee", :id => "rb_mentee" %>
         Mentee
       </label>
